--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "email": "nasa8x@gmail.com"
   },
   "dependencies": {
-    "redis": "^2.6.2"
+    "redis": "^2.6.2",
+    "lodash": "^4.15.0"
   },
   "description": "Integrated Redis caching for Mongoose queries.",
   "keywords": [
